# ska-ddc

./: ddc.py  ddc_for_dummies.py  outputPlotter.py  pfb_invPfb.py
GPUCODE_DDC/: CMakeLists.txt  py_ddc_in.py  py_ddc_out.py  qSubSeriesGPU
SKA_IPFB_REPORT/: inverse_polyphase_filter_bank_report.aux  inverse_polyphase_filter_bank_report.bbl  inverse_polyphase_filter_bank_report.glo  inverse_polyphase_filter_bank_report.ist  inverse_polyphase_filter_bank_report.out  inverse_polyphase_filter_bank_report.tex  inverse_polyphase_filter_bank_report.tex.backup  inverse_polyphase_filter_bank_report.toc
SKA_PFB_REPORT/: inverse_polyphase_filter_bank_report.aux  inverse_polyphase_filter_bank_report.bbl  inverse_polyphase_filter_bank_report.blg  inverse_polyphase_filter_bank_report.glg  inverse_polyphase_filter_bank_report.glo  inverse_polyphase_filter_bank_report.gls  inverse_polyphase_filter_bank_report.ist  inverse_polyphase_filter_bank_report.out  inverse_polyphase_filter_bank_report.tex  inverse_polyphase_filter_bank_report.tex.backup  inverse_polyphase_filter_bank_report.toc
ddc/: run.sh  test.sh
inv_pfb/: CMakeLists.txt  READ_ME_FIRST.txt  driver.cpp  inv_pfb.cu  inv_pfb.h  run  run.sh
inv_pfb/testSuite/: construct_test_data.sh  correlator.py  diff_real_inputs.py  filter_generator.py  ipfb_generator.py  pfb_generator.py  snr.py  tone_generator.py
output_correlator/output_correlator/: main.cpp  output_correlator.kdev4  timer.h
pfb_ddc/pfb/: pfb_float.cu  plot.py
pfb_ddc/snf_pfb/: compile_kat_ddc.sh
trash_and_broken_code/: pfb_invPfb.py
trash_and_broken_code/output_correlator/output_correlator/: CMakeLists.txt  timer.cpp
trunk/: ddc.py  outputCorrelator.py  outputPlotter.py  pfb_invPfb.py
trunk/GPUCODE_DDC/: SKA__DDC.o17093  ddc.cu
trunk/SKA_IPFB_REPORT/: inverse_polyphase_filter_bank_report.aux  inverse_polyphase_filter_bank_report.bib  (+5 more)
(+45 files in other folders)
